--- a/index.html
+++ b/index.html
@@ -128,7 +128,7 @@
     </div>
     <div class="chat-box" id="chat-box"></div>
     <div class="input-container">
-      <input type="text" id="user-input" placeholder="Type your message here...">
+      <input type="text" id="user-input" placeholder="Ask Clam">
       <button id="send-btn">Send</button>
     </div>
   </div>
